--- a/HomeCook/HomeCook.csproj
+++ b/HomeCook/HomeCook.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Models\CustomModels\" />
     <Folder Include="Migrations\DefaultDb\" />
   </ItemGroup>
 
